<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardBackgroundColor="@color/colorCardBg"
    app:cardCornerRadius="12sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_poster_movie"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/img_poster_movie"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_poster_movie"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_userscore"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/user_score"
            app:layout_constraintStart_toEndOf="@+id/img_poster_movie"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

        <TextView
            android:id="@+id/score_movie"
            android:layout_width="57dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/score"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tv_userscore"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="107dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/release_date"
            app:layout_constraintStart_toEndOf="@+id/img_poster_movie"
            app:layout_constraintTop_toBottomOf="@+id/score_movie" />

        <TextView
            android:id="@+id/tv_releasedate_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_movie"
            android:layout_toEndOf="@id/img_poster_movie"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/release_date"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/score_movie" />

        <TextView
            android:id="@+id/tv_desc_movie"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_light"
            android:maxLines="2"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_poster_movie"
            app:layout_constraintTop_toBottomOf="@+id/tv_releasedate_movie" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>